2024-01-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Fix spelling errors in code and documentation.

2024-01-13  Fojtik Jaroslav  <JaFojtik@yandex.com>

	coders/tiff.c Prevent sign expansion and bogus contents in upper 2
	bytes for TIFF_SHORT.

2024-01-12  Fojtik Jaroslav  <JaFojtik@yandex.com>

	coders/tiff.c Fixed TIFF_RATIONAL extraction from EXIF.

2024-01-11  Fojtik Jaroslav  <JaFojtik@yandex.com>

	coders/tiff.c Fix for multiple frames. Do not import
	TIFFTAG_COMPRESSION, TIFFTAG_IMAGELENGTH, TIFFTAG_IMAGEWIDTH ...
	from EXIF.

2024-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (EXPERIMENTAL_EXIF_TAGS): Change
	EXPERIMENTAL_EXIF_TAGS to a simple boolean (rather than an ifdef)
	and default it to 0.  This needs to be in place until the TIFF
	writer no longer crashes.

	* fuzzing/oss-fuzz-build.sh: Skip missing libheif optional
	dependencies in oss-fuzz build.

2024-01-07  Fojtik Jaroslav  <JaFojtik@yandex.com>

	coders/tiff.c Fix TIFF_RATIONAL - Two LONGs: the first represents
	the numerator of a fraction, the second the denominator.

2024-01-06  Fojtik Jaroslav  <JaFojtik@yandex.com>

	coders/tiff.c Extract EXIFIFD part from EXIF profile.

2024-01-03  Fojtik Jaroslav  <JaFojtik@yandex.com>

	coders/wpg.c Make two functions "EnsureNextImage()" and
	"LoadPaletteRec()" static.

2024-01-02  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/tiff/LIBRARY.txt: Exclude more tiff/port files.

2024-01-01  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* tiff/libtiff/tiffconf.h: Fix path to webp/types.h.

2023-12-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update the news as of December 30, 2023.

	* magick/resource.c (_UpdateMagickResourceHighwater): New private
	function to support updating highwater values where it otherwise
	does not naturally happen.  The highwater values represent the
	result of successful requests so they may be used to evaluate the
	resource limit requirements of a particular request.
