@@ -1,5 +1,5 @@
 /*
-  Copyright (C) 2012-2023 GraphicsMagick Group
+  Copyright (C) 2012-2024 GraphicsMagick Group
 
   This program is covered by multiple licenses, which are described in
   Copyright.txt. You should have received a copy of Copyright.txt with this
@@ -541,7 +541,12 @@
 #define MagickConstrainColormapIndex GmMagickConstrainColormapIndex
 #define MagickCreateDirectoryPath GmMagickCreateDirectoryPath
 #define MagickDestroyCommandInfo GmMagickDestroyCommandInfo
+#define MagickDoubleToInt GmMagickDoubleToInt
 #define MagickDoubleToLong GmMagickDoubleToLong
+#define MagickDoubleToShort GmMagickDoubleToShort
+#define MagickDoubleToUInt GmMagickDoubleToUInt
+#define MagickDoubleToULong GmMagickDoubleToULong
+#define MagickDoubleToUShort GmMagickDoubleToUShort
 #define MagickFindRawImageMinMax GmMagickFindRawImageMinMax
 #define MagickFmax GmMagickFmax
 #define MagickFmin GmMagickFmin
@@ -1134,6 +1139,7 @@
 #define WriteBlobByte GmWriteBlobByte
 #define WriteBlobFile GmWriteBlobFile
 #define WriteBlob GmWriteBlob
+#define WriteBlobLSBDouble GmWriteBlobLSBDouble
 #define WriteBlobLSBLong GmWriteBlobLSBLong
 #define WriteBlobLSBShort GmWriteBlobLSBShort
 #define WriteBlobLSBSignedLong GmWriteBlobLSBSignedLong
