@@ -40,6 +40,10 @@
 <p>2024-01-17  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li><p>magick/symbols.h, wand/wand_symbols.h: Update Gm-prefixed
+symbols.</p></li>
+<li><p>coders/bmp.c: Eliminate 'TForeignFormatDesc' and 'StoreDescPNG'
+which were accidentally writeable globals.</p></li>
 <li><p>Fix spelling errors in code and documentation.</p></li>
 </ul>
 </blockquote>
